--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+  uni: GaTech
+  year: June, 2016 &mdash; January, 2020
   # awards:
-  # summary:
+  summary: GPA 4.0
